--- a/calculator.html
+++ b/calculator.html
@@ -14,7 +14,7 @@
         text-align: center;
     }
     th {
-        background-color: wh;
+        background-color: white;
     }
     </style>
 
