--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
         margin-top: 20px;
     }
     th, td {
-        border: 1px solid black;
+        border: 1px solid green;
         padding: 8px;
         text-align: center;
     }
