--- a/calculator.html
+++ b/calculator.html
@@ -5,23 +5,28 @@
 
     <style>
     table {
-        border-collapse: collapse;
-        margin-top: 20px;
-    }
-    th, td {
-        border: 1px solid green;
-        padding: 8px;
-        text-align: center;
-    }
-    th {
-        background-color: white;
-    }
+    border-collapse: separate;
+    border-spacing: 6px;   
+    border: 3px solid green;    
+}
+
+th, td {
+    border: 2px solid green;   
+    padding: 10px 20px;
+    text-align: left;
+    font-size: 18px;
+}
+
+th {
+    font-weight: bold;
+}
+
     </style>
 
 </head>
 <body>
 
-<h1>Simple JavaScript Calculator</h1>
+<h1 style align='center'>Simple JavaScript Calculator</h1>
 
 <script src="calculator.js"></script>
 
